--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "dist/types/**/*.ts"
+    "dist/types/**/*.ts",
+    ".next/types/**/*.ts"
   ]
 }
